# stellars_jupyterlab_favourites

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
