[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellars_jupyterlab_favourites"
version = "1.0.3"
description = "Metapackage aggregating Stellars JupyterLab extensions, fixes, themes, and favourite third-party packages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Konrad Jelen", email = "konrad.jelen+github@gmail.com"}
]
keywords = ["jupyterlab", "jupyter", "extensions", "themes"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Stellars metapackages
    "stellars_jupyterlab_extensions",
    "stellars_jupyterlab_fixes",

    # Stellars core
    "nb_venv_kernels",

    # Stellars themes
    "jupyterlab_stellars_darcula_theme",
    "jupyterlab_stellars_sublime_theme",

    # JupyterLab extensions
    "jupyterlab-git",
    "jupyterlab-code-formatter",

    # Productivity extensions
    "jupytext",
    "jupyter-resource-usage",
    "jupyterlab-execute-time",
    "jupyterlab_favorites",
    "jupyterlab_iframe",
    "jupyter_app_launcher",

    # AI assistance
    "notebook-intelligence",

    # Development tools
    "nbdime",
]

[project.urls]
Homepage = "https://github.com/stellarshenson/stellars_jupyterlab_favourites"
Repository = "https://github.com/stellarshenson/stellars_jupyterlab_favourites"

